--- a/src/main/webapp/user-page.html
+++ b/src/main/webapp/user-page.html
@@ -29,8 +29,9 @@ limitations under the License.
       <ul class = "topnav" id="navigation">
       </ul>
     </nav>
-      
-    <h1 id="page-title">User Page</h1>
+
+    <h1>Community Chat </h1>
+    <h2 id="page-title">User Page</h2>
 
     <form id="my-form" class="hidden" method="POST" enctype="multipart/form-data">
         <p>Type some text:</p>
